deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-bible
  namespace: sre-bible
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-bible
  template:
    metadata:
      labels:
        app: sre-bible
    spec:
      serviceAccountName: sre-bible
      terminationGracePeriodSeconds: 40
      containers:
        - name: sre-bible
          image: ghcr.io/anthony-bible/sre-bible@sha256:55b1e6cd0e8d743590648350fe0281bd132c3c0289f487277b7abe92cfab059f
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
